# SaaSControlDeck

./: .env.example  .gitignore  .markdownlint.json  .vercelignore  AGENTS.md  CI_CD_SETUP_GUIDE.md  CLAUDE.md  CLOUD_DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE.md  DOCKERHUB_DEPLOYMENT_GUIDE.md  HEROUI_INTEGRATION_PLAN.md  README.md  deploy-from-dockerhub.sh  docker-compose.ci.yml  docker-compose.dockerhub.yml  docker-compose.staging.yml  package-lock.json  package.json  saascontrol-deployment-summary-20250912_124500.md  saascontrol-validation-20250911_022636.md  saascontrol-validation-20250911_023351.md  test-docker-build.sh  test-imports.mjs  vercel.json  verify-deployment.mjs
.codex/: config.toml
.docs/: DEPLOYMENT_GUIDES_INDEX.md  PROJECT_RESTRUCTURE_SUMMARY.md  README.md
.idx/: dev.nix
backend/: CLAUDE.md  DEPLOYMENT_GUIDE.md  README.md
backend/backend-pro1/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/backend-pro1/ai-service/app/: main.py
backend/backend-pro1/api-gateway/app/: main.py
backend/backend-pro1/api-gateway/app/core/: exceptions.py
backend/backend-pro1/api-gateway/app/routers/: analysis.py  auth.py  health.py  projects.py  users.py
backend/backend-pro1/data-service/app/: main.py
backend/backend-pro1/data-service/app/routers/: data_management.py  data_processing.py  data_upload.py
backend/backend-pro1/scripts/: init-db.sql
backend/backend-pro1/shared/: auth.py  config.py  database.py  logging.py  redis_client.py
backend/backend-pro1/shared/middleware/: metrics.py  rate_limit.py  request_id.py
docker/: README.md
docs/: DATABASE_DEPLOYMENT_REPORT.md  DOCKERHUB_CICD_SETUP.md  DOCKERHUB_DEPLOYMENT_GUIDE.md  blueprint.md
frontend/: Dockerfile  next.config.ts  package.json  tailwind.config.ts  test-imports.js  tsconfig.json  vercel.json
monitoring/: prometheus-cloud.yml  prometheus-production.yml
nginx/: nginx-cloud.conf
scripts/: backup-production.sh  deploy-dockerhub.sh  disaster-recovery.sh  health-check.sh  manual-docker-build.sh  prepare-docker-build.sh  setup-deployment.sh  setup-dockerhub-secrets.sh  setup-ssl.sh  (+4 more)
(+173 files in other folders)
